# UNIHIKERK10

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  HARDWARE_DOCS.md  RUN.md  rust-toolchain.toml  si.py
.cargo/: config.example.toml
.claude/: instructions.md  settings.json  settings.local.json
.claude/.docs/: sources.md
.claude/agents/: unihiker-k10-gpio-researcher.md  unihiker-k10-kernel-dev.md
.claude/mcp/: requirements.txt  schematic_server.py
.setup/: ONE_TIME_TOOLCHAIN.md  USB_WSL_ACCESS.md
kernel/: Cargo.toml  HARDWARE.md  build.rs  sdkconfig.defaults
kernel/src/: hw.rs  main.rs
kernel/src/dev/: accelerometer.rs  mod.rs  screen.rs
shared/: Cargo.toml
shared/src/: lib.rs
